cmake_minimum_required (VERSION 3.7)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
PROJECT(igel)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

FILE(GLOB SRCFILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB HDRFILES ${PROJECT_SOURCE_DIR}/src/*.h)

FILE(GLOB FATHOM_SRCFILES ${PROJECT_SOURCE_DIR}/src/fathom/*.c)
FILE(GLOB FATHOM_HDRFILES ${PROJECT_SOURCE_DIR}/src/fathom/*.h)

IF (DEFINED EVAL_NNUE)
    ADD_DEFINITIONS(-DEVAL_NNUE=${EVAL_NNUE})
    FILE(GLOB_RECURSE NNUE_SRCFILES ${PROJECT_SOURCE_DIR}/src/nnue/*.cpp)
    FILE(GLOB_RECURSE NNUE_HDRFILES ${PROJECT_SOURCE_DIR}/src/nnue/*.h)
ENDIF()

IF (DEFINED USE_NEON)
    ADD_DEFINITIONS(-DUSE_NEON=${USE_NEON})
ENDIF()

IF (DEFINED USE_PEXT)
    ADD_DEFINITIONS(-DUSE_PEXT=${USE_PEXT})
ENDIF()

IF (DEFINED USE_AVX2)
    ADD_DEFINITIONS(-DUSE_AVX2=${USE_AVX2})
ENDIF()

IF (DEFINED USE_AVX512)
    ADD_DEFINITIONS(-DUSE_AVX512=${USE_AVX512})
ENDIF()

IF (DEFINED _BTYPE)
    ADD_DEFINITIONS(-D_BTYPE=${_BTYPE})
    IF (UNIX)
        IF (_BTYPE STREQUAL "1")
            SET(CMAKE_CXX_FLAGS "-mbmi2 ${CMAKE_CXX_FLAGS}")
        ENDIF()
    ENDIF()
ENDIF()

IF (DEFINED SYZYGY_SUPPORT)
    ADD_DEFINITIONS(-DSYZYGY_SUPPORT=${SYZYGY_SUPPORT})
ENDIF()

IF (CMAKE_C_COMPILER_ID STREQUAL "GNU")
    SET(CMAKE_C_FLAGS "-std=gnu99 ${CMAKE_C_FLAGS}")
ENDIF ()

IF (MSVC)
    SET(CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi /Ob0 /Od /RTC1")
    SET(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /Oi /Ot /Oy /GL /GS- /DNDEBUG")
ENDIF (MSVC)

IF (DEFINED _MAKE_UNIT_TEST)
    IF (UNIX)
        ADD_DEFINITIONS(-DNDEBUG)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -O3 -march=native -pthread")
    ENDIF (UNIX)
    ADD_SUBDIRECTORY(external/googletest)
    ENABLE_TESTING()
    INCLUDE_DIRECTORIES(${googletest_SOURCE_DIR}/include ${googletest_SOURCE_DIR})
    FILE(GLOB UTSRCFILES ${PROJECT_SOURCE_DIR}/src/unit/*.cpp)
    ADD_EXECUTABLE(unit ${UTSRCFILES} ${SRCFILES} ${HDRFILES} ${FATHOM_SRCFILES} ${FATHOM_HDRFILES})
    TARGET_LINK_LIBRARIES(unit gtest gtest_main)
    TARGET_COMPILE_DEFINITIONS(unit PRIVATE ${_MAKE_UNIT_TEST})
ELSE()
    IF (UNIX)
        ADD_DEFINITIONS(-DNDEBUG)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -O3 -march=native -flto -pthread")
    ENDIF (UNIX)
    ADD_EXECUTABLE(igel ${SRCFILES} ${HDRFILES} ${FATHOM_SRCFILES} ${FATHOM_HDRFILES} ${NNUE_SRCFILES} ${NNUE_HDRFILES})
ENDIF()
